--- a/viewer/Dockerfile
+++ b/viewer/Dockerfile
@@ -1,4 +1,4 @@
-FROM baptistearno/typebot-viewer:2.16
+FROM baptistearno/typebot-viewer:latest
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
